spider-man um novo dia

--- a/index.html
+++ b/index.html
@@ -1,14 +1,33 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello World</title>
-  <link href='/style.css' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="style.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Spider-Man um novo dia</title>
 </head>
 <body>
-  <h1>Hello, world!</h1>
-  <button onclick="console.log('hello');">Press me</button>
-  <script defer type="text/javascript" src="/main.js"></script>
+    <h1>Spider-Man um novo dia</h1>
+
+    <img src="./aula nova/527254194_18542992741042190_7971946392681531329_n.jpg" alt="spider-man">
+
+    <h2>melhores informações ate sobre o personagem</h2>
+    <ol>
+        <li>teremos um spider-man independe</li>
+        <li>sem tecnologia nos trajes</li>
+        <li>o traje esta inspirado nos seus antigos atores do personagem</li>
+        <li>teremos lançadores de teia iguais ao uadrinhos</li>
+        <li>e uma aranha no meio do peito sem parecer um carrapato</li>
+    </ol>
+
+
+    <h2>informção sobre o filme que temos ate agora</h2>
+    <ul>
+        <li>termos hulk antigo louco pela cidade destruindo tudo</li>
+        <li>teremos o senhor negativo comando seu grupo contra o spider-man</li>
+        <li>seus antigos amigos vão aparecer mas nn com muito inpacto nesse filme</li>
+        <li>teremos um peter parker mas focado em ser o homem aranha</li>
+        <li>termos mas cenas de web swing pelas ruas de nova yorke</li>
+    </ul>
 </body>
 </html>
