--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <title>Spider-Man um novo dia</title>
 </head>
 <body>
-    <h1>Spider-Man um novo dia</h1>
+    <header>
+        <H1>Spider man</H1>
 
-    <img src="./aula nova/527254194_18542992741042190_7971946392681531329_n.jpg" alt="spider-man">
+        <nav>
+            <ul>
+                <li>
+                    <a href="https://youtu.be/u2CYKaiuXk8?si=TkazRsfVWsVf8xAL">Divulgação do filme</a>
+                </li>
+                <li>
+                    <a href="https://youtu.be/9ymmwq55sHY?si=1AiLi5OtvE3I13v9">Bastidores</a>
+                </li>
+                <li>
+                    <a href="https://youtube.com/@marvelbr?si=7bXjPS1YRlphcOgz">Central da marvel</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 
-    <h2>melhores informações ate sobre o personagem</h2>
-    <ol>
-        <li>teremos um spider-man independe</li>
-        <li>sem tecnologia nos trajes</li>
-        <li>o traje esta inspirado nos seus antigos atores do personagem</li>
-        <li>teremos lançadores de teia iguais ao uadrinhos</li>
-        <li>e uma aranha no meio do peito sem parecer um carrapato</li>
-    </ol>
-
-
-    <h2>informção sobre o filme que temos ate agora</h2>
-    <ul>
-        <li>termos hulk antigo louco pela cidade destruindo tudo</li>
-        <li>teremos o senhor negativo comando seu grupo contra o spider-man</li>
-        <li>seus antigos amigos vão aparecer mas nn com muito inpacto nesse filme</li>
-        <li>teremos um peter parker mas focado em ser o homem aranha</li>
-        <li>termos mas cenas de web swing pelas ruas de nova yorke</li>
-    </ul>
+    <main>
+        <div>
+            <img src="./aula nova/527254194_18542992741042190_7971946392681531329_n.jpg" alt="">
+            <p>Em Homem-Aranha: Um Novo Dia, Peter Parker (Tom Holland) está completamente focado em sua vida acadêmica, almejando viver uma vida comum com o pessoal da sua faculdade e longe dos ‘’perigos’’ oferecidos pelo amigão da vizinhança. No entanto, um ataque inesperado coloca em risco a vida de seus amigos e Peter é obrigado a colocar o seu traje especial para salvar aqueles que ama. Do lado de aliados inesperados e tentando acabar com adversários cada vez piores, o Homem-Aranha usa toda a sua força para manter a paz na cidade. Além de Zendaya, o novo filme contará com a presença de Sadie Sink.</p>
+        </div>
+    </main>
 </body>
 </html>
