fim da recuperação

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <header>
         <H1>Spider man</H1>
 
+        <h2>Curiosidades sobre o filme</h2>
+
         <nav>
             <ul>
                 <li>
@@ -28,8 +30,30 @@
     <main>
         <div>
             <img src="./aula nova/527254194_18542992741042190_7971946392681531329_n.jpg" alt="">
-            <p>Em Homem-Aranha: Um Novo Dia, Peter Parker (Tom Holland) está completamente focado em sua vida acadêmica, almejando viver uma vida comum com o pessoal da sua faculdade e longe dos ‘’perigos’’ oferecidos pelo amigão da vizinhança. No entanto, um ataque inesperado coloca em risco a vida de seus amigos e Peter é obrigado a colocar o seu traje especial para salvar aqueles que ama. Do lado de aliados inesperados e tentando acabar com adversários cada vez piores, o Homem-Aranha usa toda a sua força para manter a paz na cidade. Além de Zendaya, o novo filme contará com a presença de Sadie Sink.</p>
+            <p>Em Homem-Aranha: Um Novo Dia, Peter Parker (Tom Holland) está completamente focado em sua vida acadêmica, almejando viver uma vida comum com o pessoal da sua faculdade e longe dos ‘’perigos’’ oferecidos pelo amigão da vizinhança. No entanto, um ataque inesperado colocad em risco a vida de seus amigos e Peter é obrigado a colocar o seu traje especial para salvar aqueles que ama. Do lado de aliados inesperados e tentando acabar com adversários cada vez piores, o Homem-Aranha usa toda a sua força para manter a paz na cidade. Além de Zendaya, o novo filme contará com a presença de Sadie Sink.</p>
         </div>
+
+        <h2>Inovações que vão chegar com o filme</h2>
+        <h3>lista de beneficios do filme (bastidores)</h3>
+        <ol>
+            <li>Jackie Chan esta na equipe de luta</li>
+            <li>Hulk verde bravo ira aparecer</li>
+            <li>Novo trage</li>
+            <li>Possivel aparição dos Tunder bolts</li>
+        </ol>
+        
+        <h3>Possivel informações verdadeiras</h3>
+        <ul>
+            <li>Aparição do Miles Morales</li>
+            <li>Sadie Sink poder virar uma spider</li>
+            <li>Demolidor ficar contra piter</li>
+            <li>Piter conseguir a volta das amizades</li>
+        </ul>
     </main>
+
+        <h3>Outras infromações do filme</h3>
+        <a href="./pages/detalhes.html">Produtos do filme</a>
+        <a href="./pages/produtos.HTML">informações do filme</a>
+
 </body>
 </html>
